k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exstasia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mihxjlo/exstasia-backend:838e63499faf26f6516694fb7df1ff6d5c1cd590
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads
              mountPath: /uploads
          readinessProbe:
            httpGet:
              path: /api/galleries
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/galleries
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads
